--- a/leetCode.html
+++ b/leetCode.html
@@ -285,51 +285,23 @@ assertCompare.only = function(a, b) {
     ASSERT.add([a, b, true]);
 };
 
-/**
- * @param {number[][]} obstacleGrid
- * @return {number}
- */
-var uniquePathsWithObstacles = function(obstacleGrid) {
-    const cache = [];
-    for(let i = 0; i<obstacleGrid.length; i++) {
-        for(let j = 0; j<obstacleGrid[0].length; j++) {
-            let ways = 0;
-            if(!obstacleGrid[i][j]) {
-                if(i==0&&j==0) {
-                    ways = 1;
-                }else if(i>0&&j>0) {
-                    ways = cache[i-1][j] + cache[i][j-1];
-                }else if(i>0) {
-                    ways = cache[i-1][0];
-                }else {
-                    ways = cache[0][j-1];
-                }
-                
+var minPathSum = function(grid) {
+    for(var i=0;i<grid.length;i++){
+        for(var j=0;j<grid[0].length;j++){
+            if(i!=0||j!=0) {
+                grid[i][j] += Math.min((i>0? grid[i-1][j] : Infinity), (j>0 ? grid[i][j-1] :Infinity))
             }
-            cache[i] = cache[i] || [];
-            cache[i][j] = ways;
         }
     }
-
-    return cache[obstacleGrid.length-1][obstacleGrid[0].length-1];
+    return grid[grid.length-1][grid[0].length-1];
 };
-
-assertCompare(()=>uniquePathsWithObstacles([
-  [0,0,0],
-  [0,1,0],
-  [0,0,0]
-]), 2);
-assertCompare(()=>uniquePathsWithObstacles([[0]]), 1);
-assertCompare(()=>uniquePathsWithObstacles([
-    [0,0],
-    [0,0],
-]), 2);
-assertCompare(()=>uniquePathsWithObstacles([[1,0]]), 0);
-assertCompare(()=>uniquePathsWithObstacles([
-    [0,1,0,0,0],
-    [1,0,0,0,0],
-    [0,0,0,0,0],
-    [0,0,0,0,0]
-]), 0);
+assertCompare(()=>minPathSum([
+  [1]
+]), 1);
+assertCompare(()=>minPathSum([
+  [1,3,1],
+  [1,5,1],
+  [4,2,1]
+]), 7);
 </script>
 </body>
