--- a/leetCode.html
+++ b/leetCode.html
@@ -286,45 +286,32 @@ assertCompare.only = function(a, b) {
 };
 
 /**
- * @param {number[][]} matrix
- * @param {number} target
- * @return {boolean}
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
  */
-var searchMatrix = function(matrix, target) {
-    if(!matrix.length || !matrix[0].length) {
-        return false;
-    }
-    const getCell = function(index) {
-        let row = ~~(index/matrix[0].length);
-        let col = index - row * matrix[0].length;
-        return matrix[row][col];
-    };
-
-    for(let min = 0, max = matrix.length*matrix[0].length-1; min<=max;) {
-        let mid = ~~((min+max)/2);
-        let midVal = getCell(mid);
-        if(midVal==target) {
-            return true;
-        }else if(midVal<target) {
-            min = mid+1;
-        }else {
-            max = mid-1;
+var sortColors = function(nums) {
+    let temp;
+    let c0=0, c1=0;
+    
+    for (i=0; i<nums.length; i++) {
+        temp = nums[i];
+        if (temp === 1) {
+            nums[i] = nums[c0+c1];
+            nums[c0+c1] = 1;
+            c1++;
+        } else if (temp === 0) {
+            nums[i] = nums[c0+c1];
+            nums[c0+c1] = 1;
+            nums[c0] = 0;
+            c0++;
         }
     }
 
-    return false;
+    return nums;
 };
-assertCompare(()=>searchMatrix([
-  [1,   3,  5,  7],
-  [10, 11, 16, 20],
-  [23, 30, 34, 50]
-], 3), true);
-assertCompare(()=>searchMatrix([
-  [1,   3,  5,  7],
-  [10, 11, 16, 20],
-  [23, 30, 34, 50]
-], 13), false);
-assertCompare(()=>searchMatrix([]), false);
-assertCompare(()=>searchMatrix([[]]), false);
+assertCompare.only(()=>sortColors([2,0,2,1,1,0]), [0,0,1,1,2,2]);
+assertCompare(()=>sortColors([]), []);
+assertCompare(()=>sortColors([1,1,1]), [1,1,1]);
+assertCompare(()=>sortColors([2,0,0]), [0,0,2]);
 </script>
 </body>
