--- a/leetCode.html
+++ b/leetCode.html
@@ -286,32 +286,53 @@ assertCompare.only = function(a, b) {
 };
 
 /**
- * @param {number[]} nums
- * @return {void} Do not return anything, modify nums in-place instead.
+ * @param {number} n
+ * @param {number} k
+ * @return {number[][]}
  */
-var sortColors = function(nums) {
-    let temp;
-    let c0=0, c1=0;
-    
-    for (i=0; i<nums.length; i++) {
-        temp = nums[i];
-        if (temp === 1) {
-            nums[i] = nums[c0+c1];
-            nums[c0+c1] = 1;
-            c1++;
-        } else if (temp === 0) {
-            nums[i] = nums[c0+c1];
-            nums[c0+c1] = 1;
-            nums[c0] = 0;
-            c0++;
-        }
+var combine = function(n, k, min = 1) {
+    if(n-min<k-1 || !k) {
+        return [];
     }
 
-    return nums;
+    let result = [];
+    if(k==1) {
+        for(let i = min; i<=n; i++) {
+            result.push([i]);
+        }
+        return result;
+    }
+
+    for(let i = min; i<=n-k+1; i++) {
+        let a = combine(n, k-1, i+1);
+        a.forEach(v=>{
+            result.push([i, ...v]);
+        });
+        
+        let b = combine(n, k, i+1);
+        result = result.concat(b);
+    }
+
+    const cache = {};
+    result = result.filter(v=>{
+        const key = v.join(",");
+        if(!cache[key]) {
+            cache[key] = 1;
+            return true;
+        }else {
+            return false;
+        }
+    });
+    return result;
 };
-assertCompare.only(()=>sortColors([2,0,2,1,1,0]), [0,0,1,1,2,2]);
-assertCompare(()=>sortColors([]), []);
-assertCompare(()=>sortColors([1,1,1]), [1,1,1]);
-assertCompare(()=>sortColors([2,0,0]), [0,0,2]);
+// [[1,2],[1,3],[1,4],[2,3],[2,4],[3,4],[3,4],[2,3],[2,4],[3,4],[3,4]]
+assertCompare(()=>combine(4, 2), [
+  [2,4],
+  [3,4],
+  [2,3],
+  [1,2],
+  [1,3],
+  [1,4],
+]);
 </script>
 </body>
