--- a/leetCode.html
+++ b/leetCode.html
@@ -286,53 +286,36 @@ assertCompare.only = function(a, b) {
 };
 
 /**
- * @param {number} n
- * @param {number} k
+ * @param {number[]} nums
  * @return {number[][]}
  */
-var combine = function(n, k, min = 1) {
-    if(n-min<k-1 || !k) {
-        return [];
-    }
-
+var subsets = function(nums) {
     let result = [];
-    if(k==1) {
-        for(let i = min; i<=n; i++) {
-            result.push([i]);
+    function dfs(current, startIndex) {
+        result.push([...current]);
+        if(current.length == nums.length) {
+            return;
         }
-        return result;
+        for(let i = startIndex; i < nums.length; i++) {
+            dfs([...current, nums[i]], i + 1);
+        }
     }
 
-    for(let i = min; i<=n-k+1; i++) {
-        let a = combine(n, k-1, i+1);
-        a.forEach(v=>{
-            result.push([i, ...v]);
-        });
-        
-        let b = combine(n, k, i+1);
-        result = result.concat(b);
-    }
+    dfs([], 0);
 
-    const cache = {};
-    result = result.filter(v=>{
-        const key = v.join(",");
-        if(!cache[key]) {
-            cache[key] = 1;
-            return true;
-        }else {
-            return false;
-        }
-    });
     return result;
 };
+
 // [[1,2],[1,3],[1,4],[2,3],[2,4],[3,4],[3,4],[2,3],[2,4],[3,4],[3,4]]
-assertCompare(()=>combine(4, 2), [
-  [2,4],
-  [3,4],
+assertCompare(()=>subsets([1,2,3]), [
+  [3],
+  [1],
+  [2],
+  [1,2,3],
+  [1,3],
   [2,3],
   [1,2],
-  [1,3],
-  [1,4],
+  []
 ]);
 </script>
 </body>
