--- a/leetCode.html
+++ b/leetCode.html
@@ -287,29 +287,37 @@ assertCompare.only = function(a, b) {
 
 /**
  * @param {ListNode} head
+ * @param {number} x
  * @return {ListNode}
  */
-var deleteDuplicates = function(head) {
-    const root = new ListNode();
-    root.next = head;
-    let pre = root;
-    current = pre.next;
-    while(current) {
-        if(pre.val===current.val || current.next && current.next.val===current.val) {
-
+var partition = function(head, x) {
+    const sHead = new ListNode();
+    const oHead = new ListNode();
+    oHead.next = head;
+    let pre = oHead;
+    let oCurrent = oHead.next;
+    let sCurrent = sHead;
+    while(oCurrent) {
+        if(oCurrent.val<x) {
+            pre.next = oCurrent.next;
+            oCurrent.next = null;
+            sCurrent.next = oCurrent;   
+            sCurrent = sCurrent.next;
+            oCurrent = pre.next;
         }else {
-            pre.next = current;
-            pre = pre.next;
+            pre = oCurrent;
+            oCurrent = oCurrent.next;
         }
-        current = current.next;
     }
-    pre.next = null;
 
-    return root.next;
+    sCurrent.next = oHead.next;
+    
+    return sHead.next;
 };
 
-assertCompare(()=>deleteDuplicates(makeLink([1,2,3,3,4,4,5])), makeLink([1,2,5]));
-assertCompare(()=>deleteDuplicates(makeLink([1,1,1,2,3])), makeLink([2,3]));
-assertCompare.only(()=>deleteDuplicates(makeLink([1,1])), makeLink([]));
+assertCompare(()=>partition(makeLink([]), 3), makeLink([]));
+assertCompare(()=>partition(makeLink([1]), 3), makeLink([1]));
+assertCompare(()=>partition(makeLink([1,4,3,2,5,2]), 3), makeLink([1,2,2,4,3,5]));
+assertCompare(()=>partition(makeLink([1,2,3]), 4), makeLink([1,2,3]));
 </script>
 </body>
