--- a/leetCode.html
+++ b/leetCode.html
@@ -286,38 +286,34 @@ assertCompare.only = function(a, b) {
 };
 
 /**
- * @param {ListNode} head
- * @param {number} x
- * @return {ListNode}
- */
-var partition = function(head, x) {
-    const sHead = new ListNode();
-    const oHead = new ListNode();
-    oHead.next = head;
-    let pre = oHead;
-    let oCurrent = oHead.next;
-    let sCurrent = sHead;
-    while(oCurrent) {
-        if(oCurrent.val<x) {
-            pre.next = oCurrent.next;
-            oCurrent.next = null;
-            sCurrent.next = oCurrent;   
-            sCurrent = sCurrent.next;
-            oCurrent = pre.next;
-        }else {
-            pre = oCurrent;
-            oCurrent = oCurrent.next;
-        }
+ * 数字->二进制->格雷码
+ **/
+const num2Gray = function(num) {
+    const numStr = "0" + num.toString(2);
+    let grayCode = "";
+    for(let i = 0; i<numStr.length-1; i++) {
+        grayCode += (numStr[i]==numStr[i+1] ? "0" : "1");
     }
 
-    sCurrent.next = oHead.next;
-    
-    return sHead.next;
+    return grayCode;
 };
 
-assertCompare(()=>partition(makeLink([]), 3), makeLink([]));
-assertCompare(()=>partition(makeLink([1]), 3), makeLink([1]));
-assertCompare(()=>partition(makeLink([1,4,3,2,5,2]), 3), makeLink([1,2,2,4,3,5]));
-assertCompare(()=>partition(makeLink([1,2,3]), 4), makeLink([1,2,3]));
+/**
+ * @param {number} n
+ * @return {number[]}
+ */
+var grayCode = function(n) {
+    const result = [];
+    for(let i = 0; i<Math.pow(2, n); i++) {
+        result.push(parseInt(num2Gray(i), 2));
+    }
+
+    return result;
+};
+
+assertCompare(()=>grayCode(2), [0,1,3,2]);
+assertCompare(()=>grayCode(3), [0,1,3,2,6,7,5,4]);
+assertCompare(()=>grayCode(0), [0]);
+assertCompare(()=>grayCode(1), [0,1]);
 </script>
 </body>
