--- a/leetCode.html
+++ b/leetCode.html
@@ -301,29 +301,80 @@ const num2Gray = function(num) {
     return grayCode;
 };
 
-/**
- * @param {TreeNode} root
- * @return {number[]}
- */
-var inorderTraversal = function(root) {
+const binaryTree2Arr = function(root) {
+    if(!root) {
+        return [];
+    }
+    const queue = [root];
     const result = [];
-    const stacks = [];
-    let cur = root;
-    while(stacks.length || cur) {
-        if(cur) {
-            stacks.push(cur);
-            cur = cur.left;
+    while(queue.length) {
+        let node = queue.shift();
+        if(node) {
+            result.push(node.val);
+            queue.push(node.left||null);
+            queue.push(node.right||null);
         }else {
-            cur = stacks.pop();
-            result.push(cur.val);
-            cur = cur.right;
+            result.push(null);
         }
+    }
+
+    return 
+};
+
+/**
+ * @param {number} max
+ * @return {TreeNode[]}
+ */
+var generateTrees = function(max, min=1) {
+    if(min>max) {
+        return [];
+    }
+
+    if(min==max) {
+        return [new TreeNode(min)];
+    }
+    
+    const result = [];
+    let root = null;
+    if(max-min==1) {
+        root = new TreeNode(max);
+        root.left = new TreeNode(min);
+        result.push(root);
+
+        root = new TreeNode(min);
+        root.right = new TreeNode(max);
+        result.push(root);
+
+        return result;
+    }
+
+    for(let i = min; i<=max; i++) {
+        let leftArr = [];
+        let rightArr = [];
+        if(i>min) {
+            leftArr = generateTrees(i-1, min);
+        }
+        if(i<max) {
+            rightArr = generateTrees(max, i+1);
+        }
+
+        let j = 0;
+        do {
+            let leftNode = leftArr[j++] || null;
+            let k = 0;
+            do {
+                let rightNode = rightArr[k++] || null;
+                let root = new TreeNode(i);
+                root.left = leftNode;
+                root.right = rightNode;
+                result.push(root);
+            }while(k<rightArr.length)
+        }while(j<leftArr.length)
     }
 
     return result;
 };
 
-assertCompare(()=>inorderTraversal(makeTree([1,null,2,3])), [1,3,2]);
-assertCompare(()=>inorderTraversal(makeTree([])), []);
+// assertCompare(()=>generateTrees(3));
 </script>
 </body>
