--- a/leetCode.html
+++ b/leetCode.html
@@ -82,6 +82,10 @@ const bfs = function(root) {
 
 //先序遍历
 const preorderTraversal = function(root) {
+    if(!root) {
+        return [];
+    }
+
     const getLeftChildren = function(node) {
         if(node.left) {
             return preorderTraversal(node.left);
@@ -322,29 +326,27 @@ const binaryTree2Arr = function(root) {
 };
 
 /**
- * @param {number} n
- * @return {number}
+ * @param {TreeNode} root
+ * @return {boolean}
  */
-var numTrees = function(max, min=1) {
-    if(min>max) {
-        return 0;
-    }
-    if(max-min<2) {
-        return max-min+1;
-    }
-
-    let count = 0;
-    for(let i = min; i<=max; i++) {
-        let leftCount = i>min ? numTrees(i-1, min) : 1;
-        let rightCount = i<max ? numTrees(max, i+1) : 1;
-        count += leftCount * rightCount;
+var isValidBST = function(root) {
+    const arr = preorderTraversal(root);
+    for(let i = 0; i<arr.length-1; i++) {
+        if(arr[i]["val"]>=arr[i+1]["val"]) {
+            return false;
+        }
     }
 
-    return count;
+    return true;
 };
 
-assertCompare(()=>numTrees(0), 0);
-assertCompare(()=>numTrees(1), 1);
-assertCompare(()=>numTrees(3), 5);
+assertCompare(()=>isValidBST(null), true);
+assertCompare(()=>isValidBST(makeTree([1])), true);
+assertCompare(()=>isValidBST(makeTree([1,2])), false);
+assertCompare(()=>isValidBST(makeTree([2,1])), true);
+assertCompare(()=>isValidBST(makeTree([2,1,3])), true);
+assertCompare(()=>isValidBST(makeTree([5,1,4,null,null,3,6])), false);
+assertCompare(()=>isValidBST(makeTree([1,1])), false);
+assertCompare(()=>isValidBST(makeTree([10,5,15,null,null,6,20])), false);
 </script>
 </body>
