--- a/leetCode.html
+++ b/leetCode.html
@@ -325,28 +325,33 @@ const binaryTree2Arr = function(root) {
     return 
 };
 
-/**
- * @param {TreeNode} root
- * @return {boolean}
- */
-var isValidBST = function(root) {
-    const arr = preorderTraversal(root);
-    for(let i = 0; i<arr.length-1; i++) {
-        if(arr[i]["val"]>=arr[i+1]["val"]) {
-            return false;
+var zigzagLevelOrder = function(root) {
+    if(!root) {
+        return [];
+    }
+    let arr1 = [root];
+    let arr2 = [];
+    const result = [];
+    while(arr1.length) {
+        const level = [];
+        arr1.forEach((node)=> {
+            level.push(node.val);
+            node.left && arr2.push(node.left);
+            node.right && arr2.push(node.right);
+        });
+        if(result.length%2===1) {
+            level.reverse();
         }
+        result.push(level);
+        arr1 = arr2;
+        arr2 = [];
     }
 
-    return true;
+    return result;
 };
 
-assertCompare(()=>isValidBST(null), true);
-assertCompare(()=>isValidBST(makeTree([1])), true);
-assertCompare(()=>isValidBST(makeTree([1,2])), false);
-assertCompare(()=>isValidBST(makeTree([2,1])), true);
-assertCompare(()=>isValidBST(makeTree([2,1,3])), true);
-assertCompare(()=>isValidBST(makeTree([5,1,4,null,null,3,6])), false);
-assertCompare(()=>isValidBST(makeTree([1,1])), false);
-assertCompare(()=>isValidBST(makeTree([10,5,15,null,null,6,20])), false);
+assertCompare(()=>zigzagLevelOrder(null), []);
+assertCompare(()=>zigzagLevelOrder(makeTree([1])), [[1]]);
+assertCompare(()=>zigzagLevelOrder(makeTree([3,9,20,null,null,15,7])), [[3],[20,9],[15,7]]);
 </script>
 </body>
