--- a/leetCode.html
+++ b/leetCode.html
@@ -325,33 +325,26 @@ const binaryTree2Arr = function(root) {
     return 
 };
 
-var zigzagLevelOrder = function(root) {
-    if(!root) {
-        return [];
-    }
-    let arr1 = [root];
-    let arr2 = [];
-    const result = [];
-    while(arr1.length) {
-        const level = [];
-        arr1.forEach((node)=> {
-            level.push(node.val);
-            node.left && arr2.push(node.left);
-            node.right && arr2.push(node.right);
-        });
-        if(result.length%2===1) {
-            level.reverse();
-        }
-        result.push(level);
-        arr1 = arr2;
-        arr2 = [];
+/**
+ * @param {number[]} preorder
+ * @param {number[]} inorder
+ * @return {TreeNode}
+ */
+var buildTree = function(preorder, inorder) {
+    if(!preorder.length) {
+        return null;
     }
 
-    return result;
+    const rootIndex = inorder.indexOf(preorder[0]);
+    const root = new TreeNode();
+    root.val = preorder[0];
+    root.left = buildTree(preorder.slice(1, rootIndex+1), inorder.slice(0, rootIndex));
+    root.right = buildTree(preorder.slice(rootIndex+1), inorder.slice(rootIndex+1));
+
+    return root;
 };
 
-assertCompare(()=>zigzagLevelOrder(null), []);
-assertCompare(()=>zigzagLevelOrder(makeTree([1])), [[1]]);
-assertCompare(()=>zigzagLevelOrder(makeTree([3,9,20,null,null,15,7])), [[3],[20,9],[15,7]]);
+assertCompare(()=>buildTree([3,9,20,15,7], [9,3,15,20,7]), makeTree([3,9,20,null,null,15,7]));
+assertCompare(()=>buildTree([], []), makeTree([]));
 </script>
 </body>
