--- a/leetCode.html
+++ b/leetCode.html
@@ -330,21 +330,22 @@ const binaryTree2Arr = function(root) {
  * @param {number[]} inorder
  * @return {TreeNode}
  */
-var buildTree = function(preorder, inorder) {
-    if(!preorder.length) {
+var buildTree = function(inorder, postorder) {
+    if(!postorder.length) {
         return null;
     }
 
-    const rootIndex = inorder.indexOf(preorder[0]);
+    const rootVal = postorder[postorder.length-1];
+    const rootIndex = inorder.indexOf(rootVal);
     const root = new TreeNode();
-    root.val = preorder[0];
-    root.left = buildTree(preorder.slice(1, rootIndex+1), inorder.slice(0, rootIndex));
-    root.right = buildTree(preorder.slice(rootIndex+1), inorder.slice(rootIndex+1));
+    root.val = rootVal;
+    root.left = buildTree(inorder.slice(0, rootIndex), postorder.slice(0, rootIndex));
+    root.right = buildTree(inorder.slice(rootIndex+1), postorder.slice(rootIndex, -1));
 
     return root;
 };
 
-assertCompare(()=>buildTree([3,9,20,15,7], [9,3,15,20,7]), makeTree([3,9,20,null,null,15,7]));
+assertCompare(()=>buildTree([9,3,15,20,7], [9,15,7,20,3]), makeTree([3,9,20,null,null,15,7]));
 assertCompare(()=>buildTree([], []), makeTree([]));
 </script>
 </body>
