--- a/leetCode.html
+++ b/leetCode.html
@@ -338,29 +338,44 @@ var arr2BST = function(arr) {
     return root;
 };
 
-var connect = function(root) {
-    if(!root) {
-        return null;
+/**
+ * @param {number[][]} triangle
+ * @return {number}
+ */
+var minimumTotal = function(triangle) {
+    if(!triangle.length) {
+        return 0;
     }
-    let arr = [root];
-    while(arr.length) {
-        const nextArr = [];
-        for(let i = 0; i<arr.length; i++) {
-            const node = arr[i];
-            if(arr[i+1]) {
-                node.next = arr[i+1];
+    const map = [];
+    for(let i = 0; i<triangle.length; i++) {
+        for(let j = 0; j<triangle[i].length; j++) {
+            let min;
+            if(i==0) {
+                min = 0;
+            }else if(j==0) {
+                min = map[i-1][j];
+            }else if(j==triangle[i].length-1) {
+                min = map[i-1][j-1];
+            }else {
+                min = Math.min(map[i-1][j-1], map[i-1][j]);
             }
-            node.left && nextArr.push(node.left);
-            node.right && nextArr.push(node.right);
+
+            map[i] = map[i] || [];
+            map[i][j] = min + triangle[i][j];
         }
-        arr = nextArr;
     }
 
-    return root;
+    return Math.min(...map[triangle.length-1]);
 };
 
-assertCompare(()=>connect(makeTree([])), makeTree([]));
-assertCompare(()=>connect(makeTree([1])), makeTree([1]));
-connect(makeTree([1,2,3,4,5,6,7]));
+assertCompare(()=>minimumTotal([]), 0);
+assertCompare(()=>minimumTotal([[1]]), 1);
+assertCompare(()=>minimumTotal([
+     [2],
+    [3,4],
+   [6,5,7],
+  [4,1,8,3]
+]), 11);
+assertCompare(()=>minimumTotal([[-1],[2,3],[1,-1,-3]]), -1);
 </script>
 </body>
