--- a/leetCode.html
+++ b/leetCode.html
@@ -338,44 +338,45 @@ var arr2BST = function(arr) {
     return root;
 };
 
-/**
- * @param {number[][]} triangle
- * @return {number}
- */
-var minimumTotal = function(triangle) {
-    if(!triangle.length) {
-        return 0;
+var ladderLength = function(beginWord, endWord, wordList) {
+    const cache = {};
+    const map = {};
+    for(let word of wordList) {
+        map[word] = true;
     }
-    const map = [];
-    for(let i = 0; i<triangle.length; i++) {
-        for(let j = 0; j<triangle[i].length; j++) {
-            let min;
-            if(i==0) {
-                min = 0;
-            }else if(j==0) {
-                min = map[i-1][j];
-            }else if(j==triangle[i].length-1) {
-                min = map[i-1][j-1];
-            }else {
-                min = Math.min(map[i-1][j-1], map[i-1][j]);
+    cache[beginWord] = 1;
+
+    let queue = [beginWord];
+    while(queue.length) {
+        const next = [];
+        while(queue.length) {
+            let wordStr = queue.pop();
+            for(let index = 0; index<wordStr.length; index++) {
+                let wordArr = wordStr.split("");
+                for(let ci = 0; ci<26; ci++) {
+                    wordArr[index] = String.fromCharCode(97+ci);
+                    let str = wordArr.join("");
+                    if(!map[str]) {
+                        continue;
+                    }
+                    if(str==endWord) {
+                        return cache[wordStr] + 1;
+                    }
+                    if(!cache[str]) {
+                        next.push(str);
+                        cache[str] = cache[wordStr] + 1;
+                    }
+                }
             }
-
-            map[i] = map[i] || [];
-            map[i][j] = min + triangle[i][j];
         }
+        queue = next;
     }
 
-    return Math.min(...map[triangle.length-1]);
+    return 0;
 };
 
-assertCompare(()=>minimumTotal([]), 0);
-assertCompare(()=>minimumTotal([[1]]), 1);
-assertCompare(()=>minimumTotal([
-     [2],
-    [3,4],
-   [6,5,7],
-  [4,1,8,3]
-]), 11);
-assertCompare(()=>minimumTotal([[-1],[2,3],[1,-1,-3]]), -1);
+assertCompare(()=>ladderLength("hit", "cog", ["hot","dot","dog","lot","log","cog"]), 5);
+assertCompare(()=>ladderLength("hit", "cog", ["hot","dot","dog","lot","log"]), 0);
+assertCompare(()=>ladderLength("qa", "sq", ["si","go","se","cm","so","ph","mt","db","mb","sb","kr","ln","tm","le","av","sm","ar","ci","ca","br","ti","ba","to","ra","fa","yo","ow","sn","ya","cr","po","fe","ho","ma","re","or","rn","au","ur","rh","sr","tc","lt","lo","as","fr","nb","yb","if","pb","ge","th","pm","rb","sh","co","ga","li","ha","hz","no","bi","di","hi","qa","pi","os","uh","wm","an","me","mo","na","la","st","er","sc","ne","mn","mi","am","ex","pt","io","be","fm","ta","tb","ni","mr","pa","he","lr","sq","ye"]), 5);
 </script>
 </body>
