--- a/leetCode.html
+++ b/leetCode.html
@@ -338,45 +338,34 @@ var arr2BST = function(arr) {
     return root;
 };
 
-var ladderLength = function(beginWord, endWord, wordList) {
-    const cache = {};
-    const map = {};
-    for(let word of wordList) {
-        map[word] = true;
-    }
-    cache[beginWord] = 1;
-
-    let queue = [beginWord];
-    while(queue.length) {
-        const next = [];
-        while(queue.length) {
-            let wordStr = queue.pop();
-            for(let index = 0; index<wordStr.length; index++) {
-                let wordArr = wordStr.split("");
-                for(let ci = 0; ci<26; ci++) {
-                    wordArr[index] = String.fromCharCode(97+ci);
-                    let str = wordArr.join("");
-                    if(!map[str]) {
-                        continue;
-                    }
-                    if(str==endWord) {
-                        return cache[wordStr] + 1;
-                    }
-                    if(!cache[str]) {
-                        next.push(str);
-                        cache[str] = cache[wordStr] + 1;
-                    }
-                }
-            }
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var sumNumbers = function(root) {
+    let sum = 0;
+    const preOrder = function(node, base) {
+        if(!node) {
+            return;
         }
-        queue = next;
-    }
+        base = base * 10 + node.val;
+        if(!node.left && !node.right) {
+            sum += base;
+        }
+        node.left && preOrder(node.left, base);
+        node.right && preOrder(node.right, base);
+    };
+    preOrder(root, 0);
 
-    return 0;
+    return sum;
 };
 
-assertCompare(()=>ladderLength("hit", "cog", ["hot","dot","dog","lot","log","cog"]), 5);
-assertCompare(()=>ladderLength("hit", "cog", ["hot","dot","dog","lot","log"]), 0);
-assertCompare(()=>ladderLength("qa", "sq", ["si","go","se","cm","so","ph","mt","db","mb","sb","kr","ln","tm","le","av","sm","ar","ci","ca","br","ti","ba","to","ra","fa","yo","ow","sn","ya","cr","po","fe","ho","ma","re","or","rn","au","ur","rh","sr","tc","lt","lo","as","fr","nb","yb","if","pb","ge","th","pm","rb","sh","co","ga","li","ha","hz","no","bi","di","hi","qa","pi","os","uh","wm","an","me","mo","na","la","st","er","sc","ne","mn","mi","am","ex","pt","io","be","fm","ta","tb","ni","mr","pa","he","lr","sq","ye"]), 5);
+assertCompare(()=>sumNumbers(makeTree([])), 0);
+assertCompare(()=>sumNumbers(makeTree([1])), 1);
+assertCompare(()=>sumNumbers(makeTree([1,2])), 12);
+assertCompare(()=>sumNumbers(makeTree([1,2,3])), 25);
+assertCompare(()=>sumNumbers(makeTree([4,9,0,5,1])), 1026);
+assertCompare(()=>sumNumbers(makeTree([0,1,2])), 3);
+assertCompare(()=>sumNumbers(makeTree([1,5,1,null,null,null,6])), 131);
 </script>
 </body>
