--- a/leetCode.html
+++ b/leetCode.html
@@ -338,34 +338,59 @@ var arr2BST = function(arr) {
     return root;
 };
 
-/**
- * @param {TreeNode} root
- * @return {number}
- */
-var sumNumbers = function(root) {
-    let sum = 0;
-    const preOrder = function(node, base) {
-        if(!node) {
+var solve = function(board) {
+    const cache = {};
+    const dfs = function(i, j) {//逆向思维， 先处理开口， 将开口连在一起的O先替换成$，那么剩下的自然O自然都是可替换的了
+        if(i<0 || j<0 || i>=board.length || j>=board[0].length || cache[`${i}_${j}`]) {
             return;
         }
-        base = base * 10 + node.val;
-        if(!node.left && !node.right) {
-            sum += base;
-        }
-        node.left && preOrder(node.left, base);
-        node.right && preOrder(node.right, base);
-    };
-    preOrder(root, 0);
 
-    return sum;
+        cache[`${i}_${j}`] = 1;
+        if(board[i][j]=="O") {
+            board[i][j] = "$";
+        }else {
+            return;
+        }
+        dfs(i-1, j);
+        dfs(i, j-1);
+        dfs(i+1, j);
+        dfs(i, j+1);
+    }
+
+    for(let i = 0; i<board.length; i++) {
+        for(let j = 0; j<board[i].length; j++) {
+            if((i==0 || j==0 || i==board.length-1 || j==board[0].length-1) && board[i][j]=="O") {
+                dfs(i, j);
+            }
+        }
+    }
+
+    for(let i = 0; i<board.length; i++) {
+        for(let j = 0; j<board[i].length; j++) {
+            if(board[i][j]=="O") {
+                board[i][j] = "X";
+            }else if(board[i][j]=="$") {
+                board[i][j] = "O";
+            }
+        }
+    }
+
+    return board;
 };
 
-assertCompare(()=>sumNumbers(makeTree([])), 0);
-assertCompare(()=>sumNumbers(makeTree([1])), 1);
-assertCompare(()=>sumNumbers(makeTree([1,2])), 12);
-assertCompare(()=>sumNumbers(makeTree([1,2,3])), 25);
-assertCompare(()=>sumNumbers(makeTree([4,9,0,5,1])), 1026);
-assertCompare(()=>sumNumbers(makeTree([0,1,2])), 3);
-assertCompare(()=>sumNumbers(makeTree([1,5,1,null,null,null,6])), 131);
+assertCompare(()=>solve([]), []);
+assertCompare(()=>solve([["X"]]), [["X"]]);
+assertCompare(()=>solve([["O"]]), [["O"]]);
+assertCompare(()=>solve([
+    ["X", "X", "X", "X"],
+    ["X", "O", "O", "X"],
+    ["X", "X", "O", "X"],
+    ["X", "O", "X", "X"]
+]), [
+    ["X", "X", "X", "X"],
+    ["X", "X", "X", "X"],
+    ["X", "X", "X", "X"],
+    ["X", "O", "X", "X"]
+]);
 </script>
 </body>
