--- a/leetCode.html
+++ b/leetCode.html
@@ -189,6 +189,16 @@ function Node(val, isLeaf,topLeft,topRight,bottomLeft,bottomRight) {
     this.bottomRight = bottomRight;
 };
 
+var isPalindrome = function(str) {
+    for(let i = 0, j = str.length-1; i<j; i++, j--) {
+        if(str[i]!=str[j]) {
+            return false;
+        }
+    }
+
+    return true;
+};
+
 /**
  * @param {Node} root
  * @return {number[]}
@@ -338,59 +348,38 @@ var arr2BST = function(arr) {
     return root;
 };
 
-var solve = function(board) {
-    const cache = {};
-    const dfs = function(i, j) {//逆向思维， 先处理开口， 将开口连在一起的O先替换成$，那么剩下的自然O自然都是可替换的了
-        if(i<0 || j<0 || i>=board.length || j>=board[0].length || cache[`${i}_${j}`]) {
-            return;
-        }
-
-        cache[`${i}_${j}`] = 1;
-        if(board[i][j]=="O") {
-            board[i][j] = "$";
-        }else {
-            return;
-        }
-        dfs(i-1, j);
-        dfs(i, j-1);
-        dfs(i+1, j);
-        dfs(i, j+1);
+var partition = function(s) {
+    if(!s) {
+        return [];
+    }
+    if(s.length==1) {
+        return [[s]];
     }
 
-    for(let i = 0; i<board.length; i++) {
-        for(let j = 0; j<board[i].length; j++) {
-            if((i==0 || j==0 || i==board.length-1 || j==board[0].length-1) && board[i][j]=="O") {
-                dfs(i, j);
+    let result = [];
+    for(let i = 1; i<=s.length; i++) {
+        let aStr = s.slice(0, i);
+        if(isPalindrome(aStr)) {
+            let arr = partition(s.slice(i));
+            if(arr.length) {
+                result = result.concat(arr.map(v=>[aStr, ...v]));
+            }else {
+                result.push([aStr]);
             }
+            
         }
     }
 
-    for(let i = 0; i<board.length; i++) {
-        for(let j = 0; j<board[i].length; j++) {
-            if(board[i][j]=="O") {
-                board[i][j] = "X";
-            }else if(board[i][j]=="$") {
-                board[i][j] = "O";
-            }
-        }
-    }
-
-    return board;
+    return result;
 };
 
-assertCompare(()=>solve([]), []);
-assertCompare(()=>solve([["X"]]), [["X"]]);
-assertCompare(()=>solve([["O"]]), [["O"]]);
-assertCompare(()=>solve([
-    ["X", "X", "X", "X"],
-    ["X", "O", "O", "X"],
-    ["X", "X", "O", "X"],
-    ["X", "O", "X", "X"]
-]), [
-    ["X", "X", "X", "X"],
-    ["X", "X", "X", "X"],
-    ["X", "X", "X", "X"],
-    ["X", "O", "X", "X"]
+assertCompare(()=>partition(""), []);
+assertCompare(()=>partition("a"), [["a"]]);
+assertCompare(()=>partition("aa"), [["a", "a"], ["aa"]]);
+assertCompare(()=>partition("ab"), [["a", "b"]]);
+assertCompare(()=>partition("aab"), [
+  ["aa","b"],
+  ["a","a","b"]
 ]);
 </script>
 </body>
